# Phonetisaurus

./: CMakeLists.txt
src/include/: PhonetisaurusRex.h  util.h
src/lib/: util.cc
